@@ -58,6 +58,8 @@ Import-Package: com.openexchange.config,
  javax.xml.xpath,
  net.htmlparser.jericho,
  net.htmlparser.jericho.nodoc,
+ org.apache.commons.codec;version="1.6.0",
+ org.apache.commons.codec.net;version="1.6.0",
  org.apache.commons.httpclient;version="3.1.0",
  org.apache.commons.httpclient.cookie;version="3.1.0",
  org.apache.commons.httpclient.methods;version="3.1.0",
